<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TaskFilter</string>
	<string name="tf_dialog_content">
	    is Starting.Allow?
	  (Default:allow but not remember)
	    </string>
	<string name="tf_dialog_title">Apply For Auto Launch</string>
	<string name="tf_dialog_allow">Allow</string>
	<string name="tf_dialog_deny">Deny</string>
	<string name="tf_dialog_save">Remember</string>
	<string name="tf_main_settings">Settings</string>
	<string name="tf_settings_bootstart">Boot Start</string>
	<string name="tf_settings_startservice">Start TaskFilter</string>
	<string name="tf_settings_include_sys">Intercept System App</string>
	<string name="tf_main_pro">Apps</string>
	<string name="tf_main_about">About</string>
	<string name="tf_about_version">Version:</string>
	<string name="tf_about_mail">E-mail: xxj_2007@foxmail.com</string>
	<string name="tf_about_qq">QQ群:</string>
	<string name="tf_cm_title">Operate</string>
	<string name="tf_cm_allow">Allow</string>
	<string name="tf_cm_deny">Deny</string>
	<string name="tf_cm_delete">Forget</string>
	<string name="tf_menu_feedback">Feed Back To Me</string>
	<string name="tf_menu_update">Update</string>
	<string name="tf_menu_about">About</string>
	<string name="tf_menu_share">Share</string>
	<string name="tf_menu_quit">Quit</string>
	<string name="tf_menu_exit_content">Are You Sure To Exit?</string>
	<string name="tf_menu_exit_title">Prompt</string>
	<string name="tf_sys_sure">Sure</string>
	<string name="tf_sys_cancel">Cancel</string>
	<string name="tf_menu_share_title">Share to ...</string>
	<string name="tf_menu_share_content">Hi~I\'m using \"Task Filter\" now, it\'s so cool! Come with me!</string>
	<string name="tf_menu_quit_content">Press Again to Quit Task Filter!</string>
</resources>